--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "author": {
-    "name": "Seba Hmi",
+    "name": "Bass El Hachem",
     "email": "contact@kompo.io",
     "url": "https://kompo.io"
   },
-  "version": "1.0.15",
+  "version": "1.0.16",
   "bundleDependencies": false,
   "dependencies": {
     "vue": "^2.5.7",
