--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jquery": "^3.5.1",
     "vue-flatpickr-component": "^8.1.5",
     "vue-masonry": "^0.11.7",
-    "vuedraggable": "^2.16.0"
+    "vuedraggable": "^2.16.0",
+    "vue-scrollto": "^2.20.0"
   },
   "deprecated": false,
   "description": "Laravel Vue components for Rapid Application Development",
