--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "email": "contact@kompo.io",
     "url": "https://kompo.io"
   },
-  "version": "1.1.3",
+  "version": "1.1.5",
   "bundleDependencies": false,
   "dependencies": {
+    "lodash": "^4.17.19",
+    "axios": ">=0.21.1",
     "vue": "^2.5.7",
     "vue-template-compiler": "^2.6.10",
     "vue-loader": "^15.9.6",
