--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": ">=0.21.1",
+    "dateformat": "^5.0.3",
     "lodash": "^4.17.19",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
